syntax = "proto3";
package com.ydqp.common.receiveProtoMsg;
option java_outer_classname = "lobby";

message TaskConfigData
{
    int32 id = 1;
    string name = 2;
    int32 type = 3;
    int32 reward = 4;
    int32 nextTaskId = 5;
    int32 target = 6;
}

message PlayerTaskData
{
    int32 id = 1;
    int64 playerId = 2;
    int32 taskId = 3;
    int32 acceptTime = 4;
    int32 progress = 5;
    int32 isComplete = 6;
    int32 completeTime = 7;
    int32 isReceived = 8;
    int32 receiveTime = 9;
    int32 taskType = 10;
    bool started = 11;
    int32 no = 12
}

message TaskCommon
{
    int32 taskType = 1;         //任务类型
}

message TaskCommonSuccess
{
    repeated TaskConfigData data = 1;            //任务列表
}

message DailyTask
{
    int64 playerId = 1;         //玩家ID
    int32 taskId = 2;           //任务ID
}

message DailyTaskSuccess
{
    bool isSignSuccess = 1;     //签到是否成功
    string message = 2;         //返回信息
    int32 taskId = 3;           //任务ID
    int32 taskType = 4;         //任务类型
    int32 no = 5;
}

message AchieveTask
{
    int64 playerId = 1;         //玩家ID
    int32 taskId = 2;           //任务ID
    int32 progress = 3;         //任务进度
}

message AchieveTaskSuccess
{
    bool isAchievement = 1;
    string message = 2;
}

message PlayerCurrentTask
{
    int64 playerId = 1;         //玩家ID
    int32 taskType = 2;         //任务类型
}

message PlayerCurrentTaskSuccess
{
    PlayerTaskData playerTaskData = 1;  //玩家当前任务
}

message TaskReward
{
    int64 playerId = 1;         //玩家ID
    int32 taskId = 2;           //任务ID
    int32 taskType = 3;         //任务类型
}

message TaskRewardSuccess
{
    bool isReward = 1;          //奖励是否领取成功
    string message = 2;         //返回信息
    int32 taskId = 3;           //任务ID
    int32 taskType = 4;         //任务类型
}

message TaskUpgrade {
    int64 playerId = 1;
    int32 originGrade = 2;      //升级前等级
    int32 grade = 3;            //升级后等级
}